<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/e_mail"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/register_email"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_inputstyle"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/register_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/register_pwd"
        app:layout_constraintTop_toTopOf="@+id/register_pwd" />

    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/edit_inputstyle"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/register_name"
        app:layout_constraintTop_toTopOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/edit_inputstyle"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/register_pwd"
        app:layout_constraintTop_toBottomOf="@+id/register_pwd" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/position"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/group_position" />

    <Button
        android:id="@+id/register_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_position"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/group_position"
        android:layout_width="182dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name">

        <RadioButton
            android:id="@+id/register_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member" />

        <RadioButton
            android:id="@+id/register_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            tools:layout_editor_absoluteX="-129dp"
            tools:layout_editor_absoluteY="651dp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>